base setup of user table with ability to implement within the container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,11 @@ version: '3'
 services:
   db:
     image: postgres
-    container_name: db
+    container_name: 'db'
     environment:
-      POSTGRES_DB: db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: docker
+      POSTGRES_DB: 'db'
+      POSTGRES_USER: 'postgres'
+      POSTGRES_PASSWORD: 'docker'
     ports:
       - 5432:5432
     networks:
